--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -4,3 +4,5 @@ add_library(imgui STATIC
 	imgui/imgui_draw.cpp
 )
 target_include_directories(imgui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/imgui)
+
+add_subdirectory(nativefiledialog)
